# Capstone

./: Dockerfile  README.md  docker-compose.yaml  pick_place_lifecycle.sh
Pick_Place_Gazebo/: .gitattributes  Dockerfile  README.md  docker-compose.yaml
Pick_Place_Gazebo/simulation/launch/: run_tabletop_sim.sh
Pick_Place_Gazebo/simulation/worlds/: ur_hande_tabletop.sdf
Pick_Place_Gazebo/src/pick_place_teleop/: package.xml
Pick_Place_Gazebo/src/pick_place_teleop/pick_place_teleop/: target_twist_reset_manager.py
Pick_Place_Gazebo/src/pick_place_teleop/resource/: pick_place_teleop
Pick_Place_Gazebo/src/robotiq_hande_description/meshes/: ._finger_collision.dae
Pick_Place_Gazebo/src/servo_test_config/servo_test_config/: joint_states_filter.py
Pick_Place_Gazebo/src/teleop_bridge_msgs/: package.xml
simulation/worlds/: ur_hande_tabletop.sdf
src/pick_place_teleop/: setup.cfg  setup.py
src/pick_place_teleop/config/: teleop.yaml
src/pick_place_teleop/pick_place_teleop/: keyboard_target_twist_teleop.py
src/servo_test_config/launch/: servo_gz.launch.py
